# th.ink-tattoo-visualization

./: .dockerignore  Dockerfile  LICENSE  README.md  README.txt  conda_export.txt  print_project_code.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  main.yml  think-ci-cd.yml
config/: development.json  production.json  release.json
config/secrets/: secrets.yaml.template
infra/terraform/: main.tf
mobile/: package-lock.json  package.json
mobile/src/components/: SubscriptionBanner.js  TattooPreviewCard.js
mobile/src/config/: GlobalStyles.js  ThemeContext.js  firebase.js
mobile/src/navigation/: AppNavigator.js
mobile/src/screens/: ARViewerScreen.js  CollaborationScreen.js  HomeScreen.js  LoginScreen.js  MarketplaceScreen.js  PaymentScreen.js  PaymentsScreen.js  ProfileScreen.js  ScanScreen.js  SignupScreen.js  SubscriptionScreen.js  TattooGeneratorScreen.js
mobile/src/tests/integration/: ARViewerIntegration.test.js
scripts/: release_manager.py
server/: app.py  deploy_ai_model.py  evaluate_model.py  monitor_performance.py  requirements.txt  setup.py  train_ai_model.py
server/ai/: model_handler.py  tattoo_generator.py
server/auth/: __init__.py  auth_manager.py  security.py
server/database/: __init__.py  dependencies.py  models.py  schemas.py
server/marketplace/: marketplace_manager.py
server/payment/: payment_manager.py
server/subscription/: subscription_manager.py
src/: __init__.py  main.py  version.py
src/ai/: model_handler.py  tattoo_generator.py
src/ar/: ar_config.py  ar_visualizer.py  motion_tracker.py  performance_monitor.py  skin_detector.py  tattoo_renderer.py
src/auth/: auth_manager.py
src/config/: config_manager_ui.py  env_manager.py  environments.py  model_config.py  validator.py
src/data/: data_manager.py
src/deployment/: deploy_manager.py  deploy_verifier.py  html_report_generator.py  report_manager.py  rollback_manager.py
src/deployment/templates/: deployment_report.html
src/errors/: error_handler.py
src/logging/: log_manager.py
src/privacy/: privacy_manager.py
src/session/: session_manager.py
src/subscription/: subscription_manager.py
src/utils/: performance_monitor.py
tests/: conftest.py
tests/ar/: test_ar_visualizer.py
tests/auth/: test_auth_manager.py
tests/deployment/: test_report_manager.py
tests/integration/: test_ar_system.py
tests/payment/: test_payment_manager.py
tests/performance/: test_ar_performance.py  test_gpu_acceleration.py
tests/release/: test_release_validation.py
tools/: create_icon.py  list_files.py  print_project_tree.py
